@@ -4,10 +4,13 @@
  * Basic zjs to batch create/update nodes (with grid.js).
  * Zafu is not a separate gem anymore.
  * Added simple support for JS Tags (used to define grid colums).
+ * Enabled rebuilding of templates on partial query.
+ * Enabled 'hash' property type.
 
 * Minor changes
  * Fixed label traduction for param.
  * Enable ajax response on Node destroy (use dummy update parameter).
+ * Added 'sum' method on array. <===== TODO: Document
 
 == 1.2.0, 1.2.1 2012-05-01
 
